unpackaged/main/default/objects/Mobile_Refresh__c/Mobile_Refresh__c.object-meta.xml
<CustomObject>
    <description>Used for Records that are mobilised and only need refreshing. Split by record type.</description>
    <label>Mobile Refresh</label>
    <nameField>
        <displayFormat>MRE-{000000}</displayFormat>
        <label>Mobile Refresh Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mobile Refresh</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>