unpackaged/main/default/objects/Mobile_Refresh__c/fields/App_Menu_Option__c.field-meta.xml
<CustomField>
    <fullName>App_Menu_Option__c</fullName>
    <formula>Menu_Item__r.Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>App Menu Option</label>
    <type>Text</type>
</CustomField>