unpackaged/main/default/objects/Mobile_Refresh__c/fields/Available_in_Version__c.field-meta.xml
<CustomField>
    <fullName>Available_in_Version__c</fullName>
    <description>Sets whether the menu and sub menu items are processed for a specific version of the application. If a value is selected ie V001 then this menu or sub menu item will be returned in the initial query to return to the user - but this will be further reduced to only the Profile Menu Items that correspond to the Community Profile</description>
    <inlineHelpText>Sets whether the menu and sub menu items are processed for a specific version of the application. If a value is selected ie V001 then this menu or sub menu item will be returned in the initial query to return to the user - but this will be further reduced</inlineHelpText>
    <label>Available in Version</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>V001</fullName>
            </value>
            <value>
                <fullName>V002</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>