unpackaged/main/default/objects/Mobile_Refresh__c/fields/Catalogue_Number__c.field-meta.xml
<CustomField>
    <fullName>Catalogue_Number__c</fullName>
    <label>Catalogue Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>