unpackaged/main/default/objects/Mobile_Refresh__c/fields/Dynamic_SOQL__c.field-meta.xml
<CustomField>
    <fullName>Dynamic_SOQL__c</fullName>
    <label>Dynamic SOQL</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>