unpackaged/main/default/objects/Mobile_Refresh__c/fields/GTIN__c.field-meta.xml
<CustomField>
    <fullName>GTIN__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Used to store Product GTIN Numbers</inlineHelpText>
    <label>GTIN</label>
    <length>100</length>
    <type>Text</type>
</CustomField>