unpackaged/main/default/objects/Mobile_Refresh__c/fields/Master_Record__c.field-meta.xml
<CustomField>
    <fullName>Master_Record__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to determin a master MRE record during the cleaning up of Mobile Refresh &#39;Lot Number&#39; records.</description>
    <inlineHelpText>Used to signify a master record if multiple MRE records do/have existed for a single Lot No.</inlineHelpText>
    <label>Master Record</label>
    <type>Checkbox</type>
</CustomField>