unpackaged/main/default/objects/Mobile_Refresh__c/fields/MC_Proxy_ID__c.field-meta.xml
<CustomField>
    <fullName>MC_Proxy_ID__c</fullName>
    <description>Used for the Mobilisation of this Object</description>
    <inlineHelpText>Used for the Mobilisation of this Object</inlineHelpText>
    <label>MC_Proxy_ID</label>
    <type>TextArea</type>
</CustomField>