unpackaged/main/default/objects/Mobile_Refresh__c/fields/Menu_Item__c.field-meta.xml
<CustomField>
    <fullName>Menu_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used to lookup from a Profile Menu Item to a Menu or Sub Menu for the app menu permissions.</description>
    <inlineHelpText>Used to lookup from a Profile Menu Item to a Menu or Sub Menu for the app menu permissions.</inlineHelpText>
    <label>Menu Item</label>
    <referenceTo>Mobile_Refresh__c</referenceTo>
    <relationshipLabel>Profile Menu Items</relationshipLabel>
    <relationshipName>Profile_Menu_Items</relationshipName>
    <type>Lookup</type>
</CustomField>