unpackaged/main/default/objects/Mobile_Refresh__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <description>Used for Name - can be applied differently for each Record Type</description>
    <inlineHelpText>Used for Name - can be applied differently for each Record Type</inlineHelpText>
    <label>Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>