unpackaged/main/default/objects/Mobile_Refresh__c/fields/Object_Reference__c.field-meta.xml
<CustomField>
    <fullName>Object_Reference__c</fullName>
    <label>Object Reference</label>
    <length>100</length>
    <type>Text</type>
</CustomField>