unpackaged/main/default/objects/Mobile_Refresh__c/fields/Parent_Menu_Item__c.field-meta.xml
<CustomField>
    <fullName>Parent_Menu_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used to lookup from a Sub Menu Item to the parent &#39;Menu Item&#39;</description>
    <inlineHelpText>Used to lookup from a Sub Menu Item to the parent &#39;Menu Item&#39;</inlineHelpText>
    <label>Parent Menu Item</label>
    <referenceTo>Mobile_Refresh__c</referenceTo>
    <relationshipLabel>Sub Menu Items</relationshipLabel>
    <relationshipName>Parent_Menu_Item</relationshipName>
    <type>Lookup</type>
</CustomField>