unpackaged/main/default/objects/Mobile_Refresh__c/fields/Profile__c.field-meta.xml
<CustomField>
    <fullName>Profile__c</fullName>
    <label>Profile</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Biocomposites - MANAGEMENT</fullName>
            </value>
            <value>
                <fullName>Biocomposites - MARKET DEVELOPMENT MANAGER UK</fullName>
            </value>
            <value>
                <fullName>Biocomposites - REGIONAL MANAGER CANADA</fullName>
            </value>
            <value>
                <fullName>Biocomposites - REGIONAL MANAGER USA</fullName>
            </value>
            <value>
                <fullName>Biocomposites - SALES MANAGER INDIA</fullName>
            </value>
            <value>
                <fullName>Community - DISTRIBUTOR CANADA</fullName>
            </value>
            <value>
                <fullName>Community - DISTRIBUTOR EU (English)</fullName>
            </value>
            <value>
                <fullName>Community - DISTRIBUTOR INDIA</fullName>
            </value>
            <value>
                <fullName>Community - DISTRIBUTOR SOUTH AMERICA</fullName>
            </value>
            <value>
                <fullName>Community - DISTRIBUTOR USA</fullName>
            </value>
            <value>
                <fullName>Community - DISTRIBUTOR USA - Mid Atlantic</fullName>
            </value>
            <value>
                <fullName>Community - DISTRIBUTOR USA - Mid West</fullName>
            </value>
            <value>
                <fullName>Community - DISTRIBUTOR USA - North East</fullName>
            </value>
            <value>
                <fullName>Community - DISTRIBUTOR USA - North West</fullName>
            </value>
            <value>
                <fullName>Community - DISTRIBUTOR USA - South Central</fullName>
            </value>
            <value>
                <fullName>Community - DISTRIBUTOR USA - South East</fullName>
            </value>
            <value>
                <fullName>Community - DISTRIBUTOR USA - South West</fullName>
            </value>
            <value>
                <fullName>Community - DISTRIBUTOR USA - West Central</fullName>
            </value>
            <value>
                <fullName>System Administrator</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>