unpackaged/main/default/objects/Mobile_Refresh__c/fields/Record_Type_ID__c.field-meta.xml
<CustomField>
    <fullName>Record_Type_ID__c</fullName>
    <label>Record Type ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>