unpackaged/main/default/objects/Mobile_Refresh__c/recordTypes/Lot_Numbers.recordType-meta.xml
<RecordType>
    <fullName>Lot_Numbers</fullName>
    <active>true</active>
    <label>Lot Numbers</label>
</RecordType>