unpackaged/main/default/objects/Mobile_Refresh__c/recordTypes/Menu_Item.recordType-meta.xml
<RecordType>
    <fullName>Menu_Item</fullName>
    <active>true</active>
    <description>Used to create Menu Items</description>
    <label>Menu Item</label>
</RecordType>