unpackaged/main/default/objects/Mobile_Refresh__c/recordTypes/Org_Type.recordType-meta.xml
<RecordType>
    <fullName>Org_Type</fullName>
    <active>true</active>
    <label>Org Type</label>
</RecordType>