unpackaged/main/default/objects/Mobile_Refresh__c/recordTypes/Product.recordType-meta.xml
<RecordType>
    <fullName>Product</fullName>
    <active>true</active>
    <description>Used to create Products</description>
    <label>Product</label>
</RecordType>