unpackaged/main/default/objects/Mobile_Refresh__c/recordTypes/Profile_Menu_Item.recordType-meta.xml
<RecordType>
    <fullName>Profile_Menu_Item</fullName>
    <active>true</active>
    <description>Used to create Profile Menu Items</description>
    <label>Profile Menu Item</label>
</RecordType>