unpackaged/main/default/objects/Mobile_Refresh__c/recordTypes/Record_Type_Reference.recordType-meta.xml
<RecordType>
    <fullName>Record_Type_Reference</fullName>
    <active>true</active>
    <label>Record Type Reference</label>
</RecordType>