unpackaged/main/default/objects/Mobile_Refresh__c/recordTypes/Restriction_SOQL.recordType-meta.xml
<RecordType>
    <fullName>Restriction_SOQL</fullName>
    <active>true</active>
    <label>Restriction SOQL</label>
</RecordType>