unpackaged/main/default/objects/Mobile_Refresh__c/recordTypes/Sub_Menu_Item.recordType-meta.xml
<RecordType>
    <fullName>Sub_Menu_Item</fullName>
    <active>true</active>
    <description>Used to create Sub Menu Items</description>
    <label>Sub Menu Item</label>
</RecordType>