unpackaged/main/default/objects/Mobile_Refresh__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Status__c</columns>
    <columns>NAME</columns>
    <columns>Name__c</columns>
    <columns>Profile__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>RecordType_Name__c</columns>
    <columns>Menu_Item__c</columns>
    <columns>Product_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>