unpackaged/main/default/objects/Mobile_Refresh__c/listViews/Lot_Numbers.listView-meta.xml
<ListView>
    <fullName>Lot_Numbers</fullName>
    <columns>NAME</columns>
    <columns>Product_Name__c</columns>
    <columns>Lot_Number__c</columns>
    <columns>Catalogue_Number__c</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>CREATED_DATE</columns>
    <columns>GTIN__c</columns>
    <columns>Expiry_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Mobile_Refresh__c.Lot_Numbers</value>
    </filters>
    <label>Lot Numbers</label>
</ListView>