unpackaged/main/default/objects/Mobile_Refresh__c/listViews/Org_Type.listView-meta.xml
<ListView>
    <fullName>Org_Type</fullName>
    <columns>NAME</columns>
    <columns>Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Mobile_Refresh__c.Org_Type</value>
    </filters>
    <label>Org Type</label>
</ListView>