unpackaged/main/default/objects/Mobile_Refresh__c/listViews/Prodcuts.listView-meta.xml
<ListView>
    <fullName>Prodcuts</fullName>
    <columns>NAME</columns>
    <columns>Name__c</columns>
    <columns>Status__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Size__c</columns>
    <columns>GTIN__c</columns>
    <columns>Catalogue_Number__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Mobile_Refresh__c.Product</value>
    </filters>
    <label>Products</label>
</ListView>