unpackaged/main/default/objects/Mobile_Refresh__c/listViews/Profile_Menu_Items.listView-meta.xml
<ListView>
    <fullName>Profile_Menu_Items</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Name__c</columns>
    <columns>Profile__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>App_Menu_Option__c</columns>
    <columns>Menu_Item__c</columns>
    <columns>Order__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Mobile_Refresh__c.Profile_Menu_Item</value>
    </filters>
    <label>Profile Menu Items</label>
</ListView>