unpackaged/main/default/objects/Mobile_Refresh__c/listViews/Record_Type_References.listView-meta.xml
<ListView>
    <fullName>Record_Type_References</fullName>
    <columns>NAME</columns>
    <columns>Name__c</columns>
    <columns>Object_Reference__c</columns>
    <columns>Record_Type_ID__c</columns>
    <columns>RecordType_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Mobile_Refresh__c.Record_Type_Reference</value>
    </filters>
    <label>Record Type References</label>
</ListView>