unpackaged/main/default/objects/Mobile_Refresh__c/listViews/Restriction_SOQL.listView-meta.xml
<ListView>
    <fullName>Restriction_SOQL</fullName>
    <columns>NAME</columns>
    <columns>Name__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Dynamic_SOQL__c</columns>
    <columns>Object_Reference__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Mobile_Refresh__c.Restriction_SOQL</value>
    </filters>
    <label>Restriction SOQL</label>
</ListView>